<resources>
    <string name="app_name">Alumnado</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lblSeleccionado">Contenido seleccionado:</string>
    <string name="ImagContacto">DescripcionFoto</string>
    <string name="aniadirContacto">Añadir contacto</string>
    <string name="acercaDe">Acerca de...</string>
    <string name="borrarContacto">Borrar contacto</string>
    <string name="verDetalles">Ver detalles...</string>
    <string name="lblNombreC">Nombre</string>
    <string name="lblTelefonoC">Telefono</string>
    <string name="lblTipoC">Tipo</string>
    <string name="lblEmailC">Email</string>
    <string name="lblDireccionC">Direccion</string>
    <string name="btnGuardarC">Guardar</string>
    <string name="lblDniC">DNI</string>
    <string name="lblCalificacionC">Calificacion</string>
    <string name="borrarAlumno">Borrar alumno</string>
    <string name="cargar" />
    <string name="actualizarLista">actualizar</string>
    <string name="ordenarNombre">Alfabeticamente</string>
    <string name="ordernarCurso">Curso</string>
    <string name="ordenarCalificacion">Calificacion</string>
</resources>