<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/fab_margin"
    android:orientation="vertical"
    tools:context=".DetallesAlumno">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/lblDniC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblDniC" />

            <EditText
                android:id="@+id/txtDniC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="12345678X"
                android:inputType="textPersonName"
                android:maxLines="9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblNombreC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblNombreC" />

            <EditText
                android:id="@+id/txtNombreC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblTipoC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblTipoC" />

            <Spinner
                android:id="@+id/spinnerCurso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblEmailC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblEmailC" />

            <EditText
                android:id="@+id/txtEmailC"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="example@example.com"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblCalificacionC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblCalificacionC" />

            <EditText
                android:id="@+id/txtCalificacionC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="0.0 - 10.0"
                android:inputType="numberDecimal" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnGuardarC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarC" />
</LinearLayout>